# sundials-wrapper

./: CMakeLists.txt  README.rst
src/: CMakeLists.txt  cvode.i  cvode_ls.i  kinsol.i  kinsol_ls.i  kinsol_swig_types.i  nvector_serial.i  sundials_context.i  sundials_matrix.i  sundials_nvector.i  sundials_swig_types.i  sundials_types.i  sunlinsol_dense.i  sunmatrix_dense.i
